// Proto Configuration
syntax = "proto3";
package proto.filter;

// Java Configuration
option java_multiple_files = true;
option java_package = "com.erijl.flightvisualizer.protos.filter";
option java_outer_classname = "Filter";

// Imports
import "enums.proto";

// Classes
message RouteFilter {
  enums.RouteFilterType routeFilterType = 1;
  int32 start = 2;
  int32 end = 3;
}