// Proto Configuration
syntax = "proto3";
package proto.objects;

// Java Configuration
option java_multiple_files = true;
option java_package = "com.erijl.flightvisualizer.protos.objects";
option java_outer_classname = "Object";

// Imports


// Classes
message LegRender {
  string originAirportIataCode = 1;
  string destinationAirportIataCode = 2;
  CoordinateRender coordinates = 3;
}

message CoordinateRender {
  repeated Coordinate coordinates = 1;
}

message Coordinate {
  double latitude = 1;
  double longitude = 2;
}